old_kub/model-service.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: model-deployment
  labels:
    app: model-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      app: model-deployment
  template:
    metadata:
      labels:
        app: model-deployment
    spec:
      containers:
        - name: model-deployment
          image: ghcr.io/remla23-team13/model-service:2.0.0
          imagePullPolicy: Always
          ports:
            - name: model-port
              containerPort: 8000
---
apiVersion: v1
kind: Service
metadata:
  name: model-service
  labels:
    app: model-service
spec:
  type: NodePort
  selector:
    app: model-deployment
  ports:
    - port: 8000
      targetPort: 8000
